--- a/Content/css/translator.css
+++ b/Content/css/translator.css
@@ -411,24 +411,23 @@
   width: 85%;
 }
 
-.banner .banner-container {
+.banner-container {
     display: flex;
     align-items: center;
     max-height: 40vh;
 }
 
-.banner .banner-container .banner-left img {
+.banner-container .banner-left img {
    position: relative;
-   width: 40vw;
+   width: 30vw;
    min-width: 30vw;
-
 }
 
-.banner .banner-container .banner-right {
+.banner-container .banner-right {
   text-align: right;
 }
 
-.banner .banner-container .banner-right .title h1 {
+.banner-container .banner-right .title h1 {
   font-size: 55px;
   color: #323232;
   font-weight: 600;
@@ -437,17 +436,17 @@
   white-space: nowrap;
 }
 
-.banner .banner-container .banner-right .title span {
+.banner-container .banner-right .title span {
   color: var(--primary-color);
   border-bottom: 5px solid var(--primary-color);
   font-family: 'Mitr', sans-serif;
 }
 
-.banner .banner-container .banner-right .info {
+.banner-container .banner-right .info {
   text-align: right;
 }
 
-.banner .banner-container .banner-right .info p {
+.banner-container .banner-right .info p {
     display:inline-block;
     width: 75%;
     font-size: 21px;
@@ -458,70 +457,33 @@
 
 
 /* Responsive Section  */
-@media screen and (max-width: 837px) {
-  .banner .banner-container .banner-right .title h1 {
-    font-size: 30px;
-  }
-
-  .banner .banner-container .banner-right .info p {
-    font-size: 18px;
-  }
-}
-
 @media screen and (max-width: 800px) {
-  .banner .banner-container .banner-left img {
+  .banner-container .banner-left img {
     max-width: 100%;
     margin-top: 0;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .banner .banner-container {
-    grid-template-columns: 1fr;
-  }
-
-  .banner .banner-container {
+  .banner-container {
     margin-top: 0;
   }
 
-  .banner .banner-container .banner-right {
-    padding-top: 3rem;
-  }
-
-  .banner .banner-container .banner-right .title {
+  .banner-container .banner-right .title {
     text-align: center;
   }
 
-  .banner .banner-container .banner-right .info {
+  .banner-container .banner-right .info {
     text-align: center;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .banner .banner-container .banner-left {
+  .banner-container .banner-left {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 20px;
-  }
-}
-
-@media screen and (max-width: 568px) {
-
-  .banner .banner-container {
-    min-height: 90vh;
-  }
-
-  .banner .banner-container .banner-left img {
-    margin-top: 1rem;
-    width: 200px;
-  }
-}
-
-@media screen and (max-width: 368px) {
-  .banner .banner-container .banner-left img {
-    width: 200px;
   }
 }
 
@@ -791,10 +753,6 @@
     margin-top: 8px;
     align-items: center;
     justify-content: space-between;
-}
-
-.translate .translate-container .translate-button .translate-user div.button {
-  margin: 0;
 }
 
 .translate .translate-container .translate-button .translate-user button i {
@@ -1113,34 +1071,13 @@
   background: #e29090;
 }
 
-
-/* Responsive section  */
-@media screen and (max-width: 1024px) {
-  .translate {
-    padding: 0 2rem;
-  }
-}
-
 @media screen and (max-width: 992px) {
-
-  .translate .translate-container .context {
-    width: 100%;
-  }
-
   .translate .translate-container .translate-button {
     width: 100%;
   }
 }
 
 @media screen and (max-width: 530px) {
-  .translate {
-    padding: 0 2rem;
-  }
-
-  .translate .translate-container {
-    flex-direction: column;
-  }
-
   .translate .translate-container .translate-button {
     margin-top: 20px;
   }
@@ -1289,7 +1226,7 @@
 
 @media screen and (max-width: 992px) {
   .user-generate .generate-container .generate-items {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
@@ -1356,8 +1293,6 @@
   background: var(--primary-color-active);
 }
 
-
-
 /* Animations */
 @keyframes slideIn {
     from {
@@ -1380,6 +1315,149 @@
     to {
         max-width: 500px;
         opacity: 1;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .banner-container .banner-right .title h1 {
+        font-size: 30px;
+    }
+
+    .banner-container .banner-left img {
+        width: 30vw;
+        min-width: 30vw;
+    }
+
+    /* Doc */
+    .body-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: unset;
+        margin: unset;
+        max-width: unset;
+        transform: translateY(-25px);
+    }
+
+    .banner {
+        height: 100%;
+    }
+
+    .banner-container {
+        flex-direction: column;
+        max-height: unset;
+        margin-bottom: 0.2em;
+    }
+
+    .translate-content {
+        height: unset;
+    }
+
+
+    .translate .title h5, .translate-output-title h5 {
+        font-size: 15px;
+    }
+
+    .translate .translate-container {
+        flex-direction: column;
+    }
+
+        .translate .translate-container .translate-button .translate-user {
+            display: flex;
+            margin-top: 8px;
+            align-items: center;
+            justify-content: center;
+        }
+
+            .translate .translate-container .translate-button .translate-user div:not(:last-child) {
+                margin-right: 2em;
+            }
+
+    .banner-container .banner-right {
+        text-align: center;
+    }
+
+        .banner-container .banner-right .info {
+            display: none;
+        }
+
+        .banner-container .banner-right .title h1 {
+            margin-bottom: 25px;
+        }
+
+    .translate-textinput {
+        width: 100%;
+        font-size: 12px;
+    }
+
+    .translate .translate-container .translate-button {
+        margin-top: 20px;
+    }
+
+    .translate .translate-output .output-container {
+        padding: 0.5em 2em;
+        height: 15vh;
+    }
+
+    .btnTranslate {
+        padding: 5px 10px;
+        font-size: 15px;
+    }
+
+    .help-message {
+        bottom: unset;
+        top: 2rem;
+        left: -2rem;
+        max-width: 200px;
+    }
+
+    .notification {
+        top: 3rem;
+    }
+
+    .modal-window {
+        height: 110vh;
+        align-items: center;
+        transform: translateY(-10vh);
+    }
+
+    .modal-dialog, #dlgReport {
+        padding: .5rem 1rem .2rem 1rem;
+        width: 100%;
+    }
+
+    .modal-title {
+        font-size: 18px;
+        flex: unset;
+    }
+
+    .modal-empty {
+        padding: 0 1.5em;
+    }
+
+    .mdlReport-topInputRow {
+        flex-direction: column;
+    }
+
+        .mdlReport-topInputRow > div {
+            width: 100%;
+        }
+
+            .mdlReport-topInputRow > div:first-child {
+                margin-right: unset;
+                margin-bottom: 1em;
+            }
+}
+
+@media screen and (max-width: 800px) {
+    .banner-container .banner-left img {
+       position: relative;
+       width: 50vw;
+       min-width: 50vw;
+    }
+
+    .banner-container .banner-right .title h1 {
+        font-size: 25px;
     }
 }
 
