--- a/Site.Master
+++ b/Site.Master
@@ -17,6 +17,10 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
+    <!-- Favicon -->
+    <link runat="server" rel="shortcut icon" href="/Content/image/rojakjelah_logo-icon_coloured.png" type="image/x-icon" />
+    <link runat="server" rel="icon" href="/Content/image/rojakjelah_logo-icon_coloured.png" type="image/ico" />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="Content/css/bootstrap.min.css">
 
